[gd_scene load_steps=12 format=3 uid="uid://cyhe2a2unekfj"]

[ext_resource type="PackedScene" uid="uid://csnbo5xeydj8" path="res://ui/box.tscn" id="1_e17rd"]
[ext_resource type="Script" path="res://ui/Shops/boxes/shop_box.gd" id="2_1ykd3"]
[ext_resource type="FontFile" uid="uid://cmf6daamewwxl" path="res://assets/fonts/monogram.ttf" id="2_t4kg8"]
[ext_resource type="Texture2D" uid="uid://b870u5vca6t7n" path="res://assets/space_breaker_asset/Weapons/Small/Cannon/turret_01_mk2.png" id="3_dk5ws"]
[ext_resource type="Texture2D" uid="uid://2p5xlj0knnee" path="res://assets/ui/button.png" id="4_yksmm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_in5kj"]

[sub_resource type="Theme" id="Theme_bo4vg"]
Panel/styles/panel = SubResource("StyleBoxEmpty_in5kj")

[sub_resource type="Animation" id="Animation_adjn0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(393.6, 135.72)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.5152, 0.527893, 0.56, 1)]
}

[sub_resource type="Animation" id="Animation_nby6x"]
resource_name = "delete"
length = 0.7667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.766667),
"transitions": PackedFloat32Array(0.31864, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1.25)]
}

[sub_resource type="Animation" id="Animation_dxnxq"]
resource_name = "select_2"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7),
"transitions": PackedFloat32Array(0.392292, 1, 1),
"update": 0,
"values": [Vector2(393.6, 135.72), Vector2(393.6, 127.72), Vector2(393.6, 127.72)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 0.450625, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.1), Vector2(1.1, 1.05), Vector2(1.1, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5noop"]
_data = {
"RESET": SubResource("Animation_adjn0"),
"delete": SubResource("Animation_nby6x"),
"select_2": SubResource("Animation_dxnxq")
}

[node name="Box" instance=ExtResource("1_e17rd")]
modulate = Color(1, 1, 1, 1)
script = ExtResource("2_1ykd3")
item = null

[node name="MarginContainer" type="MarginContainer" parent="HBox" index="0"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="BoxContainer3" type="BoxContainer" parent="HBox" index="1"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Title" type="Label" parent="HBox/BoxContainer3" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_t4kg8")
theme_override_font_sizes/font_size = 16
text = "WEAPON NAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="HBox" index="2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Panel2" type="Panel" parent="HBox/BoxContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme = SubResource("Theme_bo4vg")

[node name="Icon" type="Sprite2D" parent="HBox/BoxContainer/Panel2" index="0"]
rotation = 0.785398
texture = ExtResource("3_dk5ws")

[node name="BoxContainer2" type="BoxContainer" parent="HBox" index="3"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="MarginContainer3" type="MarginContainer" parent="HBox/BoxContainer2" index="0"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="Price" type="Label" parent="HBox/BoxContainer2" index="1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.968627, 0.698039, 0.290196, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 16
text = "300$"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="HBox/BoxContainer2" index="2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="MarginContainer2" type="MarginContainer" parent="HBox" index="4"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="AnimationPlayer" parent="." index="1"]
libraries = {
"": SubResource("AnimationLibrary_5noop")
}

[node name="Stats" type="NinePatchRect" parent="." index="2"]
z_index = 10
layout_mode = 1
anchors_preset = -1
anchor_left = -1.033
anchor_top = 0.031
anchor_right = -0.033
anchor_bottom = 0.106
offset_left = -48.324
offset_top = -0.308001
offset_right = -0.324
offset_bottom = 227.592
grow_horizontal = 2
texture = ExtResource("4_yksmm")
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 13

[node name="StatsContainer" type="VBoxContainer" parent="Stats" index="0"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 0

[connection signal="pressed" from="." to="." method="_on_pressed"]
